--- a/Clubs.html
+++ b/Clubs.html
@@ -50,6 +50,7 @@
 	<div class="clearfix">
 		<div class="column menu">
 			<ul>
+				<a href="file://sd36/ENVR/StudentHome/p.sehgal/Desktop/Enver%20Creek%20Website%20Final%20(2).html"><li>Enver Creek Home</li></a>
 				<a href="https://www.surreyschools.ca/schools/envercreek/Extra-curricular/AfterSchoolPrograms/Pages/default.aspx"><li>After School Programs</li></a>
 				<a href="https://www.surreyschools.ca/schools/envercreek/Extra-curricular/Clubs/Pages/default.aspx"><li>Clubs</li></a>
 				<a href="https://www.surreyschools.ca/schools/envercreek/Extra-curricular/SportsTeams/Pages/default.aspx"><li>Sports team</li></a>
