--- a/Clubs1.html
+++ b/Clubs1.html
@@ -50,7 +50,7 @@
 	<div class="clearfix">
 		<div class="column menu">
 			<ul>
-                                <a href="https://github.com/Pratham23/Pratham23.github.io/blob/master/Clubs.html"//Pratham23.github.io/Clubs.html<li>Clubs And teams</li></a>
+                                <a href="https://github.com/Pratham23/Pratham23.github.io/blob/master/Clubs1.html"//Pratham23.github.io/Clubs1.html<li>Clubs And teams</li></a>
 				<a href="file://sd36/ENVR/StudentHome/p.sehgal/Desktop/Enver%20Creek%20Website%20Final%20(2).html"><li>Home</li></a>
 				<a href="file://sd36/ENVR/StudentHome/p.sehgal/Desktop/Enver%20creek%20Clubs.html"><li>Clubs And Teams</li></a>
                                 <a href="file://sd36/ENVR/StudentHome/p.sehgal/Desktop/Enver%20Creek%20Departments.html"><li>Departments</li></a>
