--- a/Main.html
+++ b/Main.html
@@ -50,7 +50,7 @@
 	<div class="clearfix">
 		<div class="column menu">
 			<ul>
-                               <li> <a href="file://sd36/ENVR/StudentHome/p.sehgal/Desktop/Enver%20creek%20Clubs.html//Pratham23/Clubs.html> Clubs And Teams</a></li>
+                               <li <a href="file://sd36/ENVR/StudentHome/p.sehgal/Desktop/Enver%20creek%20Clubs.html//Pratham23/Clubs.html> Clubs And Teams</a></li>
 				<a href="file://sd36/ENVR/StudentHome/p.sehgal/Desktop/Enver%20Creek%20Website%20Final%20(2).html"><li>Home</li></a>
 				<a href="file://sd36/ENVR/StudentHome/p.sehgal/Desktop/Enver%20creek%20Clubs.html"><li>Clubs And Teams</li></a>
                                 <a href="file://sd36/ENVR/StudentHome/p.sehgal/Desktop/Enver%20Creek%20Departments.html"><li>Departments</li></a>
