--- a/Enver Creek Website Final.html
+++ b/Enver Creek Website Final.html
@@ -51,7 +51,7 @@
 		<div class="column menu">
 			<ul>
 
-				<a href="https://www.surreyschools.ca/schools/envercreek/Pages/default.aspx"><li>Home</li>
+				<a href="https://www.surreyschools.ca/schools/envercreek/Pages/default.aspx"><li>Home</li></a>
 				<li>Contact</li>
 				<li>About</li>
 				<li>Maps and Directions</li>
