Update Enver Creek Website Final.html

--- a/Enver Creek Website Final.html
+++ b/Enver Creek Website Final.html
@@ -52,9 +52,9 @@
 			<ul>
 
 				<a href="https://www.surreyschools.ca/schools/envercreek/Pages/default.aspx"><li>Home</li></a>
-				<li>Contact</li>
-				<li>About</li>
-				<li>Maps and Directions</li>
+				<li>Clubs And Teams </li>
+				<li>Departments</li>
+				
 
 			</ul>
 		</div>
