--- a/Main.html
+++ b/Main.html
@@ -52,7 +52,7 @@
 			<ul>
 
 				<a href="https://www.surreyschools.ca/schools/envercreek/Pages/default.aspx"><li>Home</li></a>
-				<li>Clubs And Teams</li></a>
+				<a href = "https://pratham23.github.io/Clubs.html">Google Search Engine</A><li>Clubs And Teams</li></a>
 				<li>Departments</li></a>
 
 			</ul>
