--- a/Main.html
+++ b/Main.html
@@ -52,8 +52,8 @@
 			<ul>
 
 				<a href="https://www.surreyschools.ca/schools/envercreek/Pages/default.aspx"><li>Home</li></a>
-				<a href = "https://pratham23.github.io/Clubs.html"><li>Clubs And Teams</li></a>
-				<li>Departments</li></a>
+				<a href ="https://pratham23.github.io/Clubs.html"><li>Clubs And Teams</li></a>
+				<a href ="https://pratham23.github.io/Departments.html"><li>Departments</li></a>
 
 			</ul>
 		</div>
